--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,16 @@
 @font-face {
-  src:
-    url(/Inter/Inter-Bold.woff) format('woff'),
-    url(Inter/Inter-Bold.woff2) format('woff2');
+  src: url(/Inter/Inter-Bold.woff) format("woff"),
+    url(Inter/Inter-Bold.woff2) format("woff2");
 
-  font-family: 'Inter';
+  font-family: "Inter";
   font-weight: bold;
 }
 
 @font-face {
-  src:
-    url(/Inter/Inter-Regular.woff) format('woff'),
-    url(Inter/Inter-Regular.woff2) format('woff2');
+  src: url(/Inter/Inter-Regular.woff) format("woff"),
+    url(Inter/Inter-Regular.woff2) format("woff2");
 
-  font-family: 'Inter';
+  font-family: "Inter";
   font-weight: normal;
 }
 
@@ -25,9 +23,6 @@
   font-weight: semibold;
 } */
 
-
-
-
 .page {
   min-width: 1100px;
   /* мы ещё не умеем делать мобильную версию сайта, */
@@ -36,26 +31,25 @@
   /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
   /* выше для экранов больше 1600px отцентрировали весь контент */
-  font-family: 'Inter','Helvetica Neue', Arial, sans-serif;
-  
+  font-family: "Inter", "Helvetica Neue", Arial, sans-serif;
 }
 
 .header {
+  /* margin: 0 0 0 0; */
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
   display: flex;
   align-items: center;
-  border: 1px solid rgb(16, 15, 15);
+  /* border: 1px solid rgb(16, 15, 15); */
+  background-color: #f2f2f2;
+  position: relative;
+  z-index: 1;
 
   /* выше установили ограничения для секции */
 }
 
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
-/* .header__square-pic {
-  height: 568px;
-  width: 568px;
-} */
 
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
@@ -67,26 +61,27 @@
 
 .logo {
   border: 1px solid red;
-
+  width: 228px;
+  height: 32px;
 }
 
 .logo_place_header {
   position: absolute;
   left: 64px;
   top: 30px;
-  width: 228px;
-  height: 32px;
-  border: 1px solid red;
-  /* background-image: url(/images/logo_place_header.svg); */
+  z-index: 1;
 }
 
 .header__title {
   border: 1px solid red;
   width: 730px;
   margin-left: 64px;
-  height: 96px;
+  line-height: 96px;
+  color: #000000;
   font-size: 102px;
   font-weight: 600;
+  padding: 0;
+  z-index: 1;
 }
 
 .header__subtitle {
@@ -95,43 +90,90 @@
   left: 64px;
   bottom: 30px;
   width: 388px;
-  height: 25px;
+  line-height: 25px;
   font-size: 18px;
   font-weight: normal;
-  /* font-family: 'Inter'; */
-
+  padding: 0;
+  font-family: "Inter";
+  z-index: 1;
 }
 
 /* .header__link {
-  border: 1px solid red;
+
 
 } */
 
 .header__main-illustration {
   border: 1px solid red;
+  /* z-index: 2; */
   position: absolute;
-  width: 765px;
-  height: 608px;
-  /* bottom: 0; */
-  /* top: 64px; */
+  bottom: 0;
   right: 0;
-  /* height: 608px;
-  width: 765px; */
-  /* margin-bottom: 0; */
-  z-index: -1;
-  margin: 0;
-
+  height: 608px;
+  width: 765px;
+  z-index: 1;
 }
 
 .header__square-pic {
-  border: 1px solid rgb(149, 255, 0);
+  height: 568px;
+  width: 568px;
+  border: 1px solid #000000;
+  z-index: 2;
   position: absolute;
   top: 64px;
   right: 0;
-  height: 568px;
-  width: 568px;
+  padding: 0;
   background-color: #2f80ed;
-  z-index: -2;
-  /* margin: 0; */
+  z-index: 0;
+}
 
+.description {
+  margin-top: 100px;
+  /* height: 100vh; */
+  min-height: 100px;
+  min-width: 784px;
+  border: 1px solid #000000;
+  display: flex;
+  justify-content: center;
+  min-height: 100px;
+}
+
+.two-columns {
+  border: 1px solid #000000;
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: space-between;
+}
+
+.two-columns__brief {
+  border: 1px solid #5e15a2;
+  width: 175px;
+  /* height: 100%; */
+  margin-top: 0;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+  border: 1px solid #5e15a2;
+  min-width: 784px;
+  width: 80%;
+}
+
+.two-columns__paragraph {
+  border: 1px solid #5e15a2;
+  margin-bottom: 30px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__span-accent {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: 600;
 }
