--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,18 +1,9 @@
 .kaufman {
   background-color: #000000;
-  border: 1px solid black;
   color: white;
-  margin-top: 100px;
+  margin-top: 0;
   min-height: 50px;
   position: relative;
   overflow: hidden;
   z-index: -2;
-}
-
-.kaufman__triangle {
-  position: absolute;
-  right: -210px;
-  width: 877px;
-  height: 877px;
-  z-index: -1;
 }
