--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,6 @@
 .feynman {
-  margin-top: 100px;
-  margin-bottom: 100px;
+  margin: 0 0 100px 0;
+  background-color: #f2f2f2;
   background-image: url(../../images/feynman.png);
   background-position: left 0 bottom 0;
   background-size: 867px 637px;
