--- a/blocks/kaufman/kaufman.css
+++ b/blocks/kaufman/kaufman.css
@@ -1,9 +1,10 @@
 .kaufman {
-  background-color: #000000;
+  background-color: #1f1f1f;
   color: white;
   margin-top: 0;
   min-height: 50px;
   position: relative;
   overflow: hidden;
   z-index: -2;
+  padding: 90px 0 0 0;
 }
