--- a/blocks/oakley/oakley.css
+++ b/blocks/oakley/oakley.css
@@ -1,6 +1,7 @@
 .oakley {
-  margin-top: 0;
-  margin-bottom: 70px;
+  padding-bottom: 100px;
+  padding-top: 160px;
   display: flex;
   justify-content: center;
+  background-color: #f2f2f2;
 }
