--- a/blocks/table/__heading/_theme/table__heading_theme_dark.css
+++ b/blocks/table/__heading/_theme/table__heading_theme_dark.css
@@ -1,7 +1,7 @@
 .table__heading_theme_dark {
-  color: white;
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
   padding: 0;
+  margin: 0 0 20px 0;
 }
