--- a/blocks/table/__text/_theme/table__text_theme_dark.css
+++ b/blocks/table/__text/_theme/table__text_theme_dark.css
@@ -1,6 +1,6 @@
-.table__text_margin {
-  margin-top: 20px;
+.table__text_theme_dark {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
+  margin: 0;
 }
