--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,9 +1,9 @@
 .video__iframe {
   width: 515px;
   height: 316px;
-  margin: 0 20px -20px auto;
+  margin: 0 20px 0 auto;
 }
 
 .video__iframe:last-of-type {
-  margin: 0 auto -20px 0;
+  margin: 0 auto 0 0;
 }
