--- a/blocks/section-subtitle/_resources/section-subtitle_resources.css
+++ b/blocks/section-subtitle/_resources/section-subtitle_resources.css
@@ -1,6 +1,7 @@
 .section-subtitle_resources {
   width: 60%;
   margin: 20px auto 0 auto;
+  padding: 0;
   text-align: center;
   line-height: 34px;
   font-size: 24px;
