--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -1,7 +1,7 @@
 .footer__column-link {
   color: white;
   text-decoration: none;
-  margin: 0 0 10px 0;
+  margin: 0 0 0 0;
 }
 
 .footer__column-link:last-of-type {
