--- a/blocks/logo/_place/logo_place_header.css
+++ b/blocks/logo/_place/logo_place_header.css
@@ -1,8 +1,8 @@
 .logo_place_header {
-  margin: 0;
-  padding: 0;
   position: absolute;
   left: 64px;
   top: 30px;
   z-index: 1;
+  width: 228px;
+  height: 32px;
 }
