--- a/blocks/table/_theme/table_theme_dark.css
+++ b/blocks/table/_theme/table_theme_dark.css
@@ -1,7 +1,8 @@
-.table {
+.table_theme_dark {
   width: 1100px;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin-bottom: 90px;
 }
