--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -2,6 +2,8 @@
   width: 515px;
   height: 316px;
   margin: 0 20px 0 auto;
+  object-fit: scale-down;
+  object-position: right bottom;
 }
 
 .video__iframe:last-of-type {
