--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,5 +1,6 @@
 .feynman {
   margin: 0 0 100px 0;
+  padding-top: 100px;
   background-color: #f2f2f2;
   background-image: url(../../images/feynman.png);
   background-position: left 0 bottom 0;
