--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,6 @@
 .footer {
   min-height: 350px;
-  border: 1px solid #1f1f1f;
   background-color: #1f1f1f;
   margin-bottom: 0;
+  padding-top: 60px;
 }
