--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -1,8 +1,7 @@
 .khan__book-pic {
-  /* border: 1px solid red; */
   width: 620px;
   height: 608px;
   margin: 0 48px 0 0;
   object-position: left top;
-  object-fit: none;
+  object-fit: cover;
 }
