--- a/blocks/footer/__columns/footer__columns.css
+++ b/blocks/footer/__columns/footer__columns.css
@@ -1,7 +1,6 @@
 .footer__columns {
   width: 90%;
-  margin: 0 auto 40px auto;
-  display: flex;
+  margin: 0 auto 0 auto;
   justify-content: space-between;
   display: flex;
 }
