--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,8 @@
 .footer {
   min-height: 350px;
   background-color: #1f1f1f;
-  margin-bottom: 0;
+  padding-bottom: 60px;
   padding-top: 60px;
+  display: flex;
+  box-sizing: border-box;
 }
