--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -4,6 +4,7 @@
   margin: 0 20px 0 auto;
   object-fit: scale-down;
   object-position: right bottom;
+  border: none;
 }
 
 .video__iframe:last-of-type {
